--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ function AllScan() {
                 //altrimenti, messaggio di errore
                 else {
                     alert("Errore: " + APIresponse.message)
-    alert(APIresponse.help)
+    alert(cid)
                 }
             });
         }
