--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ function AllScan() {
 </script>
 </head>
 <body>
-    <input type="number" id="mcc" placeholder="MCC" required>
+    <input type="number"   value="222"   id="mcc" placeholder="MCC" required>
     <input type="number" id="mnc" placeholder="MNC" required>
     <input type="number" id="enodeb" placeholder="eNb" required>
     <input type="number" id="secid" placeholder="Sector" required>
