--- a/index.html
+++ b/index.html
@@ -104,7 +104,14 @@ function AllScan() {
 </head>
 <body>
     <input type="number"   value="222"   id="mcc" placeholder="MCC" required>
-    <input type="number" id="mnc" placeholder="MNC" required>
+    <input type="number" list="MCCs" name="MCC" id="mnc">
+    <datalist id="MCCs">
+        <option value="10">VODAFONE</option>
+        <option value="1">TIM</option>
+        <option value="99">H3G</option>
+        <option value="99">ILIAD</option>
+        <option value="88">WINDTRE</option>
+    </datalist>
     <input type="number" id="enodeb" placeholder="eNb" required>
     <input type="number" id="secid" placeholder="Sector" required>
    
