--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@ function AllScan() {
 </head>
 <body>
     <input type="number"   value="222"   id="mcc" placeholder="MCC" required>
-    <input type="number" list="MCCs" name="MCC" id="mnc">
-    <datalist id="MCCs">
+    <input type="number" list="MNCs" name="MNC" id="mnc">
+    <datalist id="MNCs">
         <option value="10">VODAFONE</option>
         <option value="1">TIM</option>
         <option value="99">H3G</option>
