--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ function AllScan() {
 </head>
 <body>
     <input type="number"   value="222"   id="mcc" placeholder="MCC" required>
-    <input type="number" list="MNCs" name="MNC" id="mnc">
+    <input type="number" list="MNCs" name="MNC" id="mnc" placeholder="MNC" required>
     <datalist id="MNCs">
         <option value="10">VODAFONE</option>
         <option value="1">TIM</option>
