--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@ function AllScan() {
    iconAnchor:   [13, 41], // point of the icon which will correspond to marker's location
    popupAnchor:  [-1, -39] // point from which the popup should open relative to the iconAnchor
 });
-                 } else if (mnc == 50 && (sec == 61 || sec == 62 || sec == 63)) {
+                 } else if (mnc == 50 && (sec == 61 || sec == 62 || sec == 63 || sec == 41 || sec == 42 || sec == 43)) {
                          band = "B7";
 			  colorebande = "magenta";
                          iconemarker = L.icon({
