--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ function AllScan() {
                 "method": "POST",
                 "headers": {},
                 "processData": false,
-                "data": "{\"token\":" + token + ", \"radio\": " + radio + ", \"mcc\": " + mcc + ", \"mnc\": " + mnc + ", \"cells\": [{ \"lac\": " + lac + ", \"cid\": " + cid + ", \"psc\": " + psc + " }], \"address\": " + address + "}"
+                "data": "{\"token\":\"" + token + "\", \"radio\": " + radio + ", \"mcc\": " + mcc + ", \"mnc\": " + mnc + ", \"cells\": [{ \"lac\": " + lac + ", \"cid\": " + cid + ", \"psc\": " + psc + " }], \"address\": " + address + "}"
             }
 
             $.ajax(request).done(function (APIresponse) {
