--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@ var defaultmarkericon = L.icon({
 */
 
 function AllScan() {
-    var token = $("#token").val(),
-    enodeb = $("#enodeb").val(),
+    var NumToken = 0,
+            arrayToken = $("#token").val().replace(/\s+/g, '').split(','),
     secid = $("#secid").val(),
      colorebande = $("#colorebande").val(),
         iconemarker = $("#iconemarker").val(),
@@ -86,7 +86,7 @@ function AllScan() {
                 "method": "POST",
                 "headers": {},
                 "processData": false,
-                "data": "{\"token\":\"" + token + "\", \"radio\": " + radio + ", \"mcc\": " + mcc + ", \"mnc\": " + mnc + ", \"cells\": [{ \"lac\": " + lac + ", \"cid\": " + cid + ", \"psc\": " + psc + " }], \"address\": " + address + "}"
+                "data": "{\"token\":\"" + arrayToken[NumToken] + "\", \"radio\": " + radio + ", \"mcc\": " + mcc + ", \"mnc\": " + mnc + ", \"cells\": [{ \"lac\": " + lac + ", \"cid\": " + cid + ", \"psc\": " + psc + " }], \"address\": " + address + "}"
             }
 
             $.ajax(request).done(function (APIresponse) {
@@ -226,7 +226,8 @@ function AllScan() {
                          marker.bindTooltip(enodeb + ":" + secid + " " + band.fontcolor(colorebande)  , {permanent: true, direction: 'bottom'}).openTooltip();
                 }
                 //altrimenti, messaggio di errore
-                else {
+                else { if(APIresponse.message == "Token balance over; you have used up all your requests for today" && NumToken < arrayToken.length - 1) {NumToken++}
+
                     alert("Errore: " + APIresponse.message)
     alert("Not found: " + cid)
                 }
