--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ function AllScan() {
      colorebande = $("#colorebande").val(),
         iconemarker = $("#iconemarker").val(),
 	band = $("#band").val(),
-
+	enodeb = $("#enodeb").val(),
         radio = '"lte"',
         mcc = $("#mcc").val(),
         mnc = $("#mnc").val(),
