--- a/index.html
+++ b/index.html
@@ -72,10 +72,14 @@ function AllScan() {
         lac = 1,
         startcid = $("#startcid").val(),
         stopcid = $("#stopcid").val(),
+	coordinatedestra = $("#coordinatedestra").val(),
+        coordinatesinistra = $("#coordinatesinistra").val(),
+        verificafake = $("#verificafake").val(),
         psc = 0,
         address = 1;
 
-    
+        const [latdestraalto, londestraalto] = coordinatedestra.split(',');
+        const [latsinistrabasso, lonsinistrabasso] = coordinatesinistra.split(',');
    
         startcid = stopcid = enodeb * 256 + Number(secid);
         for(var cid = startcid; cid <= stopcid; cid++) {
@@ -226,15 +230,19 @@ function AllScan() {
    iconAnchor:   [13, 41], // point of the icon which will correspond to marker's location
    popupAnchor:  [-1, -39] // point from which the popup should open relative to the iconAnchor
 });}
-                if(APIresponse.status == "ok") {
+                 if(APIresponse.status == "ok" && ((APIresponse.lat >= latsinistrabasso && APIresponse.lat <= latdestraalto) && (APIresponse.lon >= lonsinistrabasso && APIresponse.lon <= londestraalto ) && verificafake == "Si")) {
+                 var marker = L.marker([ APIresponse.lat, APIresponse.lon], {icon: iconemarker}).addTo(map);
+                        marker.bindPopup("<b>LAT:</b> " + APIresponse.lat + "<br /><b>LON:</b> " + APIresponse.lon + "<br /><b>CID:</b> " + cid + "<br /><b>ENODEB:</b> " + enodeb + "<br /><b>SECTOR:</b> " + secid + "<br /><b>BAND:</b> " + band.fontcolor(colorebande) + "<br />").openPopup();
+                         marker.bindTooltip(enodeb + ":" + secid + " " + band.fontcolor(colorebande)  , {permanent: true, direction: 'bottom'}).openTooltip();
+                } else if(APIresponse.status == "ok" && verificafake == "No") {
                     var marker = L.marker([ APIresponse.lat, APIresponse.lon], {icon: iconemarker}).addTo(map);
                         marker.bindPopup("<b>LAT:</b> " + APIresponse.lat + "<br /><b>LON:</b> " + APIresponse.lon + "<br /><b>CID:</b> " + cid + "<br /><b>ENODEB:</b> " + enodeb + "<br /><b>SECTOR:</b> " + secid + "<br /><b>BAND:</b> " + band.fontcolor(colorebande) + "<br />").openPopup();
                          marker.bindTooltip(enodeb + ":" + secid + " " + band.fontcolor(colorebande)  , {permanent: true, direction: 'bottom'}).openTooltip();
-                }
+                } 
                 //altrimenti, messaggio di errore
                 else { if(APIresponse.message == "Token balance over; you have used up all your requests for today" && NumToken < arrayToken.length - 1) {NumToken++; cid--;}
 
-                    alert("Errore: " + APIresponse.message + "Attenzione!Se stai usando un gruppo di token potrebbe anche non essere vero!")
+                    alert("Errore: " + APIresponse.message + "Attenzione!Se stai usando un gruppo di token potrebbe anche non essere vero!Oppure, stai cercando una cella esterna ai confini settati, non la troverai. Se non stai utilizzando il filtro fake, ricordati di selezionare la voce no, nell'apposita funzione. Dunque, ti invitiamo a controllare la correttezza dei dati digitati.Grazie.")
     alert("Not found: " + cid)
                 }
             });
@@ -258,7 +266,13 @@ function AllScan() {
     <input type="number" id="secid" placeholder="Sector" required>
    
     <input type="text" id="token" placeholder="Token" required>
-
+	<input type="text" id="coordinatedestra" placeholder="LatLng Destra" required>
+        <input type="text" id="coordinatesinistra" placeholder="LatLng Sinistra" required>
+<select id="verificafake">
+        <option selected disabled>Verifica dei Fake</option>
+   <option value="Si">SI</option>
+       <option value="No">NO</option>
+      </select>
     <button onclick="AllScan()">Go</button>
 
     <div id="result"></div>
@@ -302,7 +316,10 @@ L.control.layers({
         position: "topright"
     }).addTo(map);
 
- 
+ map.on("dblclick", function(e){
+        var mp = new L.Marker([e.latlng.lat, e.latlng.lng]).addTo(map);
+        mp.bindPopup(e.latlng.lat + ',' + e.latlng.lng);
+ }); 
  var gpslayer = new L.LayerGroup().addTo(map);
  // Add the 'scale' control
     L.control.scale().addTo(map);
