--- a/index.html
+++ b/index.html
@@ -230,6 +230,7 @@ function AllScan() {
    iconAnchor:   [13, 41], // point of the icon which will correspond to marker's location
    popupAnchor:  [-1, -39] // point from which the popup should open relative to the iconAnchor
 });}
+		    console.log(verificafake);
                  if(APIresponse.status == "ok" && ((APIresponse.lat >= latsinistrabasso && APIresponse.lat <= latdestraalto) && (APIresponse.lon >= lonsinistrabasso && APIresponse.lon <= londestraalto ) && verificafake == "Si" && verificafake != "No" && verificafake != "" )) {
                  var marker = L.marker([ APIresponse.lat, APIresponse.lon], {icon: iconemarker}).addTo(map);
                         marker.bindPopup("<b>LAT:</b> " + APIresponse.lat + "<br /><b>LON:</b> " + APIresponse.lon + "<br /><b>CID:</b> " + cid + "<br /><b>ENODEB:</b> " + enodeb + "<br /><b>SECTOR:</b> " + secid + "<br /><b>BAND:</b> " + band.fontcolor(colorebande) + "<br />").openPopup();
