--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@ function AllScan() {
 	<input type="text" id="coordinatedestra" placeholder="LatLng Destra" required>
         <input type="text" id="coordinatesinistra" placeholder="LatLng Sinistra" required>
 <select id="verificafake">
-        <option selected disabled>Verifica dei Fake</option>
+        <option value="null" selected disabled>Verifica dei Fake</option>
    <option value="Si">SI</option>
        <option value="No">NO</option>
       </select>
