--- a/index.html
+++ b/index.html
@@ -169,6 +169,10 @@ outline: none !important;
 <script src="https://maps.locationiq.com/v2/libs/leaflet-geocoder/1.9.5/leaflet-geocoder-locationiq.min.js"></script>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet-plugins/3.0.2/control/Permalink.js"></script>
+	
+<script src='https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.js'></script>
+<link href='https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.css' rel='stylesheet' />
+
      
  <!-- Global site tag (gtag.js) - Google Analytics -->
     </script>
@@ -454,7 +458,13 @@ btn.onclick =  function() {
 
                     // API token goes here
 var key = "9f2c971b2cd69c";
-
+L.mapbox.accessToken = 'pk.eyJ1IjoiYmFuY29tYWx0ZSIsImEiOiJja3Fub3I1dDUwYmg3MnVueHVzcmhqdDBkIn0.HEt44zGrExgF_tODahgsHg';
+    
+var mapboxTiles = L.tileLayer('https://api.mapbox.com/styles/v1/mapbox/streets-v11/tiles/{z}/{x}/{y}?access_token=' + L.mapbox.accessToken, {
+       attribution: '© <a href="https://www.mapbox.com/feedback/">Mapbox</a> © <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>',
+       tileSize: 512,
+       zoomOffset: -1
+});
 // Add layers that we need to the map
 var streets = L.tileLayer.Unwired({key: key, scheme: "streets"});
 	    var osm = L.tileLayer(
@@ -477,6 +487,7 @@ var map = L.map('map', {
 // Add the 'layers' control
 L.control.layers({
         "Streets": streets,
+	"Mapbox Tiles": mapboxTiles,
         "OSM": osm,
 	"SAT": satellite,
     }, null, {
