--- a/index.html
+++ b/index.html
@@ -169,8 +169,6 @@ outline: none !important;
 <script src="https://maps.locationiq.com/v2/libs/leaflet-geocoder/1.9.5/leaflet-geocoder-locationiq.min.js"></script>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet-plugins/3.0.2/control/Permalink.js"></script>
-	<script src='https://api.mapbox.com/mapbox.js/v3.3.1/mapbox.js'></script>
-<link href='https://api.mapbox.com/mapbox.js/v3.3.1/mapbox.css' rel='stylesheet' />
      
  <!-- Global site tag (gtag.js) - Google Analytics -->
     </script>
@@ -458,7 +456,7 @@ btn.onclick =  function() {
 var key = "9f2c971b2cd69c";
 
 // Add layers that we need to the map
-
+var streets = L.tileLayer.Unwired({key: key, scheme: "streets"});
 	    var osm = L.tileLayer(
   'https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
     attribution: 'Data © <a href="http://osm.org/copyright">OpenStreetMap</a>',
@@ -467,13 +465,7 @@ var key = "9f2c971b2cd69c";
 	    var satellite = L.tileLayer('https://server.arcgisonline.com/ArcGIS/rest/services/World_Imagery/MapServer/tile/{z}/{y}/{x}', {
 	attribution: 'Tiles &copy; Esri &mdash; Source: Esri, i-cubed, USDA, USGS, AEX, GeoEye, Getmapping, Aerogrid, IGN, IGP, UPR-EGP, and the GIS User Community'
 });
-L.mapbox.accessToken = 'pk.eyJ1IjoiYmFuY29tYWx0ZSIsImEiOiJja3Fub3I1dDUwYmg3MnVueHVzcmhqdDBkIn0.HEt44zGrExgF_tODahgsHg';
-    
-var mapboxTiles = L.tileLayer('https://api.mapbox.com/styles/v1/mapbox/streets-v11/tiles/{z}/{x}/{y}?access_token=' + L.mapbox.accessToken, {
-       attribution: '© <a href="https://www.mapbox.com/feedback/">Mapbox</a> © <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>',
-       tileSize: 512,
-       zoomOffset: -1
-});
+
 
 // Initialize the map
 
@@ -484,8 +476,8 @@ var map = L.map('map', {
 });
 // Add the 'layers' control
 L.control.layers({
+        "Streets": streets,
         "OSM": osm,
-	"Mapbox Tiles": mapboxTiles,
 	"SAT": satellite,
     }, null, {
         position: "topright"
